# firmware_toolkit_yak

./: CONTRIBUTING.md  FirmwareWorkbench.desktop  LICENSE  README.md  README_TH.md  _probe_file.txt  app.py  config.yaml  demo_pyside6.py  diagnose_git_add.sh  firmware_setup.sh  firmware_toolkit.sh  fw-manager.sh  github_workflows_ci.yml  patch_utils.py  pyproject.toml  rebuild_squashfs.py  requirements.txt  run-gui.sh  run.sh  setup.sh  setup_fmk.sh  test_qt.py  ui_theme.py
.github/workflows/: ci.yml
core/: elf_analyze.py  file_utils.py  fs_scan.py  logging_utils.py  patches.py  secret_scan.py  uboot_env.py
dialogs/: __init__.py  custom_script.py  rootfs_editor.py  selective_patch.py  special_functions.py  uboot_env_editor.py
docs/: ลองใช้ Python 3.10 หรือ 3.11 แทน.txt  แนะนำตั้งแต่ศูนย์.txt
firmware_toolkit_yak.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/analysis/: ai_rootfs1_squashfs_0x240000_20250830_130320.txt  ai_rootfs1_squashfs_0x240000_20250830_150210.txt  ai_rootfs1_squashfs_0x240000_20250831_001229.txt  (+73 more)
scripts/: extract_kernels.sh  extract_multi_auto_v2.sh  generate_patch.sh  inspect_fs.sh  repack_rootfs.sh
tests/: test_file_utils.py  test_fs_scan.py  test_secret_and_elf.py
tmp/: fw_probe.py
workspaces/uboot-env-editor/: README.md  pyproject.toml  requirements.txt
workspaces/uboot-env-editor/src/: main.py
workspaces/uboot-env-editor/src/env/: crc.py  editor.py  parser.py
workspaces/uboot-env-editor/src/ui/: window.py
workspaces/uboot-env-editor/tests/: test_crc.py  test_editor.py  test_parser.py
